# miniShell

./: .gitignore  CMakeLists.txt  Makefile  errors_handler.c  minishell.c
includes/: minishell.h
srcs/: command_decomposition.c  command_decomposition1.c  cut_str.c  dict_utils.c  dictionary.c  dollar.c  envs.c  errors_handler.c  exec.c  ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_export_utils.c  ft_list_remove_if.c  ft_pwd.c  ft_signal.c  ft_unset.c  minishell.c  quotes.c  run_cmd.c  utils.c  utils2.c
srcs/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_max.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_streq.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+9 more)
srcs/printf/: Makefile
srcs/printf/includes/: ft_printf.h  parser.h
srcs/printf/srcs/: c_handler.c  d_handler.c  ft_printf.c  p_handler.c  parcer.c  per_handler.c  processor.c  s_handler.c  u_handler.c  utils.c  utils2.c  x_handler.c  xcap_handler.c
